@@ -1,7 +1,8 @@
-$Id: NEWS,v 1.113 2007/12/28 02:11:01 rocky Exp $
+$Id: NEWS,v 1.114 2008/01/05 12:12:52 rocky Exp $
 
 version 0.80
 - Add get_media_changed for FreeBSD
+- Savannah bug #21910
 
 version 0.79
 2007-10-27
@@ -390,4 +391,4 @@ version 0.1
 
   Routines split off from VCDImager.
 
-$Id: NEWS,v 1.113 2007/12/28 02:11:01 rocky Exp $
+$Id: NEWS,v 1.114 2008/01/05 12:12:52 rocky Exp $
